--- a/Site Mathtech/conteudos/1 ano/funcaoafim.css
+++ b/Site Mathtech/conteudos/1 ano/funcaoafim.css
@@ -81,6 +81,10 @@ header {
     background-color: #FFF1D6;
     padding: 8px 45px;
     border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 350px;
 }
 
 #navegacao a {
