--- a/Site Mathtech/conteudos/3 ano/conteudos3ano.css
+++ b/Site Mathtech/conteudos/3 ano/conteudos3ano.css
@@ -58,6 +58,10 @@ header {
     background-color: var(--laranjaclaro);
     padding: 8px 45px;
     border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 350px;
 }
 
 #navegacao a {
