--- a/Site Mathtech/material-de-apoio/menu-material.css
+++ b/Site Mathtech/material-de-apoio/menu-material.css
@@ -78,6 +78,10 @@ main {
     background-color: var(--laranjaclaro);
     padding: 8px 45px;
     border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 350px;
 }
 
 #navegacao a {
