--- a/Site Mathtech/style.css
+++ b/Site Mathtech/style.css
@@ -65,6 +65,10 @@ header {
     background-color: var(--laranjaclaro);
     padding: 8px 45px;
     border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 350px;
 }
 
 #navegacao a {
@@ -75,11 +79,6 @@ header {
     font-family: 'Baron Neue';
 }
 
-#icons {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-}
 
 #navegacao nav > a:hover{
     color: var(--laranja);
