--- a/Site Mathtech/material-de-apoio/mapas.css
+++ b/Site Mathtech/material-de-apoio/mapas.css
@@ -121,19 +121,20 @@ main nav {
     margin-bottom: 50px;
 }
 
-#conteudos a {
+#conteudos button{
     background-color: var(--branco);
     padding: 10px;
     height: 100px;
     border-radius: 8px;
     font-size: 20px;
     text-transform: uppercase;
-    font-weight: 800;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     text-decoration: none;
+    border: none;
 }
 
 .primeiroAno {
@@ -144,4 +145,23 @@ main nav {
 }
 .terceiroAno {
     color: var(--azulescuro);
+}
+
+dialog{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0);
+    border: none;
+    max-width: 100vh;
+    max-height: 100vh;
+}
+
+dialog img{
+    max-width: 1400px;
+}
+
+dialog button{
+    background: rgba(0, 0, 0, 0);
+    border: none;
 }
