--- a/Site Mathtech/material-de-apoio/videos.css
+++ b/Site Mathtech/material-de-apoio/videos.css
@@ -126,19 +126,20 @@ main nav {
     margin-bottom: 50px;
 }
 
-#conteudos a {
+#conteudos button {
     background-color: var(--branco);
     padding: 10px;
     height: 100px;
     border-radius: 8px;
     font-size: 20px;
     text-transform: uppercase;
-    font-weight: 800;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     text-decoration: none;
+    border: none;
 }
 
 .primeiroAno {
