--- a/Site Mathtech/login.css
+++ b/Site Mathtech/login.css
@@ -13,6 +13,8 @@
   --laranjaclaro: #FFF1D6;
   --laranjaclaro2: #FFD67C;
   --branco: #fff;
+  --cinza-inputs: #D2DFFF;
+  --placeholder: #8693B5;
 }
 
 @font-face {
@@ -43,4 +45,140 @@ body {
 #containerGlobal {
   max-width: 1440px;
   margin: 0 auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header a {
+  margin-left: 50px;
+}
+
+#logo {
+  /* A IMAGEM DA LOGO SIMPLESMENTE N MUDA DE TAMANHO??? JURO TENTEI DE TUDO */
+}
+
+#sair {
+  width: 150px;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+main > img {
+  /* todos esses 4 treco só pra inverter a imagem pqp */
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  margin-left: 100px;
+  width: 550px;
+  height: 550px;
+}
+
+#acessarConta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 100px;
+  margin-bottom: 50px;
+  width: 80vh;
+  font-family: 'Circe';
+}
+
+h1 {
+  font-family: 'Hanken Grotesk';
+  font-size: 34px;
+  font-weight:900;
+  margin-bottom: 10px;
+  color: var(--azulescuro);
+}
+
+#criarConta {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#criarConta a {
+  text-decoration: none;
+}
+
+#criarConta h2 {
+  color: var(--azulescuro);
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#acessarConta p {
+  color: var(--azulescuro);
+  font-weight: bold;
+}
+
+#acessarConta img {
+  width: 70px;
+  height: 70px;
+  background-color: var(--cinza-inputs);
+  border-radius: 100px;
+  margin-left: 30px;
+}
+
+h2 {
+  font-size: 18px;
+  font-weight: normal;
+  color: #333;
+}
+
+hr {
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+#inputs input {
+  background-color: var(--cinza-inputs);
+  width: 400px;
+  height: 70px;
+  border-radius: 40px;
+  border: none;
+}
+
+#inputs input::placeholder {
+  font-family: 'Circe';
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--placeholder);
+}
+
+#inputs button {
+  width: 250px;
+  border: none;
+  height: 56px;
+  font-size: 26px;
+  background-color: var(--azulescuro);
+  color: var(--laranja);
+  border-radius: 8px;
+  font-family: 'Baron Neue';
+}
+
+#inputs a {
+  font-family: 'Circe';
+  color: var(--azulescuro);
 }
