--- a/Site Mathtech/ranking.css
+++ b/Site Mathtech/ranking.css
@@ -86,25 +86,94 @@ header {
 }
 
 main {
-    margin-top: 5.375rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h1{
-    margin-top: 100px;
+    margin-top: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Lemon Milk';
-    font-size: 62px;
+    font-size: 72px;
     color: var(--laranja);
+}
+
+.podio {
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.podio span {
+    color: var(--branco);
+    font-family: 'Circe';
+}
+
+.podio img {
+    width: 600px;
+    height: 350px;
+}
+
+.icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: -30px;
+    
+}
+
+.segundo, .primeiro, .terceiro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.segundo img, .primeiro img, .terceiro img {
+    width: 250px;
+    height: 250px;
+    margin-top: -40px;
+}
+
+.listaUsuarios {
+    margin-block: 50px;
+}
+
+.titulos {
+    color: var(--branco);
+    font-family: 'Hanken Grotesk';
+    font-size: 25px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .listas{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 50px;
-    background-color: var(--laranjaclaro);
-    margin-inline: 100px;
-    margin-bottom: 70px;
+    background-color: var(--branco);
+    padding: 30px;
+    border-radius: 20px;
+}
+
+.listas ul {
+    list-style-type: none;
+}
+
+.listas ul li {
+    height: 50px;
+}
+
+.listas > hr {
+    border: none;
+    width: 2px;
+    background-color: var(--azulescuro);
+}
+
+#primeira hr {
+    width: 90vh;
 }
