--- a/Site Mathtech/cadastro.css
+++ b/Site Mathtech/cadastro.css
@@ -158,6 +158,9 @@ hr {
   height: 70px;
   border-radius: 40px;
   border: none;
+  font-size: 16px;
+  padding-left: 1rem;
+  font-family: 'Circe';
 }
 
 #inputs input::placeholder {
@@ -176,4 +179,8 @@ hr {
   color: var(--laranja);
   border-radius: 8px;
   font-family: 'Baron Neue';
+}
+
+#inputs button:hover {
+  cursor: pointer;
 }
