--- a/Site Mathtech/login.css
+++ b/Site Mathtech/login.css
@@ -158,6 +158,9 @@ hr {
   height: 70px;
   border-radius: 40px;
   border: none;
+  font-size: 16px;
+  padding-left: 1rem;
+  font-family: 'Circe';
 }
 
 #inputs input::placeholder {
